<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".act_login">

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:onClick="entrar"
        android:text="@string/btn_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_salvar_senha" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:onClick="cadastrar"
        android:text="@string/btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />

    <Button
        android:id="@+id/btn_confirmar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:onClick="alterar"
        android:text="@string/text_alterar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastrar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_foto"
        android:layout_width="272dp"
        android:layout_height="109dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <CheckBox
        android:id="@+id/cb_salvar_senha"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="Salvar a senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="313dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/text_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_foto"
        app:layout_constraintVertical_bias="0.893" />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="313dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:hint="@string/text_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>