<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".act_lancamentos">


    <Button
        android:id="@+id/btn_ajudar"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_ajudar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancelar"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_data"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_below="@+id/btn_data"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="Data da Entrega (Previsão)"
        android:inputType="date"
        android:text="01/11/2019"
        app:layout_constraintBottom_toTopOf="@+id/btn_lancar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_valor"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edit_quantidade"
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/text_quantidade"
        android:inputType="number"
        android:text="1000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha" />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/text_descricao"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_foto"
        android:layout_width="142dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView_user"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <CheckBox
        android:id="@+id/checkBox_oferta"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:layout_marginTop="112dp"
        android:checked="true"
        android:onClick="checkObjeto"
        android:text="Oferta"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_procura"
        android:layout_width="101dp"
        android:layout_height="34dp"
        android:layout_marginTop="112dp"
        android:onClick="checkObjeto"
        android:text="Procura"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_lancar"
        android:layout_width="0dp"
        android:layout_height="53dp"

        android:layout_marginTop="500dp"
        android:onClick="onClick"
        android:text="Lançar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Remover"
        android:layout_width="0dp"
        android:layout_height="53dp"

        android:onClick="onClick"
        android:text="Remover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lancar" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:onClick="onClick"
        android:text="CANCELAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Remover" />

    <Spinner
        android:id="@+id/spinner_tu"
        android:layout_width="192dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/edit_quantidade"
        app:layout_constraintTop_toBottomOf="@+id/edit_senha" />

    <TextView
        android:id="@+id/text_tela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="LANÇAMENTOS"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_oferta"
        app:layout_constraintEnd_toStartOf="@+id/image_foto"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <Button
        android:id="@+id/btn_data"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="64dp"
        android:background="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintBottom_toTopOf="@+id/btn_lancar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/edit_data" />

    <EditText
        android:id="@+id/edit_valor"
        android:layout_width="203dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/text_valor"
        android:inputType="numberDecimal"
        android:text="R$ 100,00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_quantidade" />

    <TextView
        android:id="@+id/textview_urlimagem"
        android:layout_width="79dp"
        android:layout_height="2dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/btn_lancar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textview_uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edit_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_foto"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/textview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/textview_alterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="128dp" />


</androidx.constraintlayout.widget.ConstraintLayout>